# LockerZ

./: .gitignore  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
backend/: index.js  job.js  package.json  server.js
frontend/: .eslintrc.json  components.json  next.config.ts  package.json  tsconfig.json
frontend/public/locales/en/: translation.json
frontend/public/locales/th/: translation.json
frontend/src/: i18n.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/category/: page.tsx
frontend/src/app/loading/: layout.tsx  page.tsx
frontend/src/app/locker/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: CategorySelector.tsx  FileGrid.tsx  I18nProvider.tsx  PaginationControls.tsx  Rotating-tips.tsx  changelog.tsx  context-menu.tsx  dashboard.tsx  image-viewer.tsx  mode-toggle.tsx  sidebar.tsx
frontend/src/components/ui/: performance-impact.tsx
frontend/src/components/widget/: CategorySelector.tsx  Changelog.tsx  Context-menu.tsx  Dashboard.tsx  FileGrid.tsx  Image-comparison.tsx  Image-viewer.tsx  ImageSelectionModal.tsx  Move-dialog.tsx  OptimizedImage.tsx  PaginationControls.tsx  Sidebar.tsx
frontend/src/hooks/: useSettings.ts
frontend/src/lib/: fonts.ts
frontend/src/styles/: scrollbar.css
frontend/src/types/: file.ts
frontend/src/utils/: imageLoader.js
lockerz/: .eslintrc.json  .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
lockerz/public/: changelog.json
lockerz/public/locales/en/: translation.json
lockerz/public/locales/jp/: translation.json
lockerz/src-tauri/: Cargo.toml  tauri.conf.json
lockerz/src-tauri/capabilities/: default.json
lockerz/src-tauri/icons/: icon.icns
lockerz/src-tauri/src/: lib.rs
lockerz/src-tauri/src/modules/: category.rs  config.rs  db.rs  filecache.rs  filehandler.rs  files.rs  imgoptimize.rs  logger.rs  pathutils.rs  stats.rs
lockerz/src/app/: globals.css  layout.tsx  page.tsx
lockerz/src/app/category/: page.tsx
lockerz/src/app/generatepatch/: page.tsx
lockerz/src/app/locker/: page.tsx
lockerz/src/app/settings/: page.tsx
lockerz/src/components/ui/: toast.tsx
lockerz/src/components/widget/: CategorySelector.tsx  Changelog.tsx  Context-menu.tsx  Dashboard.tsx  FileGrid.tsx  Image-viewer.tsx  ImageProcessor.tsx  Move-dialog.tsx  (+2 more)
lockerz/src/hooks/: useSettings.ts
lockerz/src/lib/: fonts.ts  lang.ts  localstoragekey.ts
lockerz/src/styles/: scrollbar.css
lockerz/src/types/: file.ts
public/: changelog.json
public/locales/en/: translation.json
public/locales/jp/: translation.json
public/locales/th/: translation.json
src/: App.tsx  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/modules/: category.rs  config.rs  db.rs  fileassoc.rs  filecache.rs  filehandler.rs  imagedupe.rs  imgoptimize.rs  logger.rs  pack.rs  stats.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/category/: page.tsx
src/app/locker/: page.tsx
src/app/settings/: page.tsx
src/components/: I18nProvider.tsx
src/components/dialog/: ExportProgressDialog.tsx  ImagePanel.tsx  ImportProgressDialog.tsx  TagCreator.tsx  TagItem.tsx  TagList.tsx  TagSearch.tsx
src/components/layout/: Layout.tsx  Sidebar.tsx  TitleBar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  chart.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  input.tsx  label.tsx  performance-impact.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  toast.tsx  tooltip.tsx
src/components/widget/: BatchOptimizedImage.tsx  BatchProcessingProvider.tsx  BulkActionStatistics.tsx  BulkTagManagerDialog.tsx  CategoryCard.tsx  CategorySelector.tsx  Changelog.tsx  Context-menu.tsx  Dashboard.tsx  DragAndDropProvider.tsx  DragDropZone.tsx  DuplicateChecker.tsx  DuplicateProgress.tsx  FileCard.tsx  FileGrid.tsx  FileSearch.tsx  FileSort.tsx  Image-viewer.tsx  ImageProcessor.tsx  Move-dialog.tsx  PaginationControls.tsx  ProgressInfo.tsx  Sidebar.tsx  TagItem.tsx  TagManagerDialog.tsx
src/hooks/: use-database.ts  use-tag-operations.ts  useSettings.ts  useTagImages.ts
src/lib/: database.ts  fonts.ts  lang.ts
src/pages/: About.tsx  Category.tsx  DupeChecker.tsx  Home.tsx  Locker.tsx  Settings.tsx
src/styles/: global.css  scrollbar.css
src/types/: cache.ts  database.ts  file.ts
src/utils/: SafeModeContext.tsx  SettingsContext.tsx
test/: index.js  job.js
(+19 files in other folders)
