[package]
name = "lockerz"
version = "0.3.0"
description = "Let's organize your refernce"
authors = ["MrSypz"]
license = "MIT"
repository = "https://github.com/MrSypz/LockerZ/"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true # Compile your binary in smaller steps.

#[profile.release.package.wry]
#debug = true
#debug-assertions = true

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
opencv = { version = "0.93.5", default-features = false, features = ["imgproc", "imgcodecs"] }
base64 = "0.22.1"
lazy_static = "1.5.0"
once_cell = "1.9"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
bincode = "1.3"
sha2 = "0.10.8"
window-vibrancy = "0.5.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
trash = "5.2.1"
rayon = "1.10.0"
