[package]
name = "lockerz"
version = "0.8.0"
description = "LockerZ — image reference manager"
authors = ["MrSypz"]
license = "MIT"
repository = "https://github.com/MrSypz/LockerZ/"
edition = "2021"
rust-version = "1.77.2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
window-vibrancy = "0.7"
tokio = { version = "1", features = ["full"] }
