[package]
name = "lockerz"
version = "0.8.0"
description = "LockerZ — image reference manager"
authors = ["MrSypz"]
license = "MIT"
repository = "https://github.com/MrSypz/LockerZ/"
edition = "2021"
rust-version = "1.77.2"

[profile.dev]
incremental = true

[profile.dev.package.fast_image_resize]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.zune-core]
opt-level = 3
[profile.dev.package.rayon]
opt-level = 3
[profile.dev.package.rayon-core]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
window-vibrancy = "0.7"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
trash = "5"
chrono = "0.4"
rayon = "1"
dashmap = "6"
once_cell = "1"
image = { version = "0.25", features = ["jpeg", "png", "gif", "bmp", "tiff", "webp"] }
fast_image_resize = "6"
base64 = "0.22"
lazy_static = "1"
bincode = "1"
sha2 = "0.10"
futures = "0.3"
num_cpus = "1"
