[package]
name = "lockerz"
version = "0.1.0"
description = "Let's organize your refernce"
authors = ["MrSypz"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
opencv = { version = "0.93.5", default-features = false, features = ["imgproc", "imgcodecs"] }
base64 = "0.22.1"
lazy_static = "1.5.0"
once_cell = "1.9"
chrono = "0.4"
rayon = "1.10.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
bincode = "1.3"
